Fixed some issues related to virtual entities.